# speed_up

./: .gitignore  Cargo.toml  Makefile  README.md  main.cpp  main.py  tmp.py
mini_requests_cpp/: MANIFEST.in  Makefile  lib.cpp  pyproject.toml  setup.py
mini_requests_rust/: Cargo.toml
mini_requests_rust/src/: lib.rs
rust_client/: Cargo.toml
rust_client/src/: main.rs
rust_server/: Cargo.toml
rust_server/src/: main.rs
src/: main.rs
