[package]
name = "mini_requests_rust"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mini_requests_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", default-features = false, features = [
    "abi3-py38",
    "extension-module",
] }
pyo3-async-runtimes = { version = "0.25.0", default-features = false, features = [
    "tokio-runtime",
] }
reqwest = { version = "0.12.20", default-features = false }
tokio = { version = "1.45.1", default-features = false }
