[package]
name = "rust_client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { version = "0.3.31", default-features = false }
reqwest = { version = "0.12.20", default-features = false }
tokio = { version = "1.45.1", default-features = false, features = [
    "macros",
    "rt-multi-thread",
] }
